--- a/extension/css/styles.css
+++ b/extension/css/styles.css
@@ -72,7 +72,7 @@ dt, dd {
 	padding-top: 70px;
 }
 
-#about-section {
+.about-section {
 	text-align: center;
 	color: #fff;
 	text-shadow: 0 1px 0 rgba(0,0,0,0.35);
@@ -80,22 +80,22 @@ dt, dd {
 	margin-bottom: 30px;
 }
 
-#about-section ul,
-#about-section li {
+.about-section ul,
+.about-section li {
 	margin: 0;
 	padding: 0;
 	list-style: none;
 	cursor: pointer;
 }
 
-#about-section li {
+.about-section li {
 	text-transform: uppercase;
 	font-size: 11px;
 	padding: 1px 7px;
 	display: inline-block;
 }
 
-#about-section li:hover {
+.about-section li:hover {
 	background: #fff;
 	border-radius: 10px;
 	box-shadow: 0 1px 0 rgba(0,0,0,0.2);
@@ -103,17 +103,17 @@ dt, dd {
 	text-shadow: none;
 }
 
-#about-section a {
+.about-section a {
 	color: #fff;
 	font-weight: bold;
 	font-size: 1.5em;
 	text-shadow: 0 1px 0 rgba(0,0,0,0.35);
 }
-#about-section a:hover {
+.about-section a:hover {
 	color: #f6ac79;
 }
 
-#about-section dd {
+.about-section dd {
 	margin-bottom: 10px;
 }
 
@@ -128,12 +128,16 @@ dt, dd {
 }
 
 #titlebar-inner {
-	width: 100%;
 	height: 56px;
+	position: absolute;
+	top: 0;
+	right: 0;
 }
 
 #titlebar h3 {
-	float: left;
+	position: absolute;
+	top: 0;
+	left: 0;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 1.5em;
 	font-style: italic;
