tweak "no cruises found" messages

--- a/extension/css/styles.css
+++ b/extension/css/styles.css
@@ -340,6 +340,19 @@ blockquote.events-module p {
 	padding: 0 7px;
 }
 
+#no-cruises h3 {
+	font-size: 18px;
+}
+
+#no-cruises p a {
+	color: #0081b1;
+	font-weight: bold;
+	font-size: 16px;
+}
+#no-cruises p a:hover {
+	color: #20a9dc
+}
+
 
 /* Other */
 .event-block .block-link {
